fix scrollbar position

--- a/src/main/webapp/views/css/home_page.css
+++ b/src/main/webapp/views/css/home_page.css
@@ -154,7 +154,7 @@ header .row {
 }
 .aside-info {
     background-color: #e0eaec;
-    padding: 15px;
+    padding-left: 15px;
     width: 280px;
 }
 
@@ -162,14 +162,14 @@ header .row {
     font-size: 14px;
     font-weight: bold;
     text-transform: uppercase;
-    margin-top: 0;
+    margin-top: 15px;
     margin-bottom: 10px;
     color: #788188;
 }
 
 .aside-col-info {
     padding-left: 0;
-    height: calc(100vh - 120px);
+    height: calc(100vh - 105px);
     overflow-y: hidden;
     padding-right: 0;
 }
